--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Wordle PPY</title>
+  <link rel="icon" href="./letra.png" type="image/png">
   <link rel="stylesheet" href="./styles.css">
   <script src="./script.js" defer></script>
 </head>
@@ -21,7 +22,19 @@
     </div>
 
     <h1 class="title">Wordle PPY</h1>
-    <input class="input_attempt" name="input_attempt" type="text">
+    <button type="button" class="button_music">
+      <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+        <path
+          d="M13.5 4.06c0-1.336-1.616-2.005-2.56-1.06l-4.5 4.5H4.508c-1.141 0-2.318.664-2.66 1.905A9.76 9.76 0 001.5 12c0 .898.121 1.768.35 2.595.341 1.24 1.518 1.905 2.659 1.905h1.93l4.5 4.5c.945.945 2.561.276 2.561-1.06V4.06zM17.78 9.22a.75.75 0 10-1.06 1.06L18.44 12l-1.72 1.72a.75.75 0 001.06 1.06l1.72-1.72 1.72 1.72a.75.75 0 101.06-1.06L20.56 12l1.72-1.72a.75.75 0 00-1.06-1.06l-1.72 1.72-1.72-1.72z" />
+      </svg>
+    </button>
+
+    <audio class="background_audio" loop>
+      <source src="./Point Being - Go By Ocean _ Ryan McCaffrey.mp3" type="audio/mp3">
+      Tu navegador no soporta el elemento audio
+    </audio>
+
+    <input class="input_attempt" name="input_attempt" type="text" placeholder="Una palabra de 5 letras">
     <span class="error"></span>
     <button class="button_attempt">
       <span class="circle1"></span>
@@ -29,7 +42,7 @@
       <span class="circle3"></span>
       <span class="circle4"></span>
       <span class="circle5"></span>
-      <span class="text">Intentar</span>
+      <span class="text">Adivinar</span>
     </button>
     <div class="results"></div>
   </div>
